--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -6,10 +6,11 @@
 .HomePage__header {
   margin: 0 10%;
   display: flex;
-  flex-direction: column;
   height: 100vh;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .HomePage__header-h1 {
@@ -20,7 +21,6 @@
 .HomePage__header-p {
   line-height: 1.625;
   margin-top: 20px;
-  text-align: center;
   letter-spacing: 0.8px;
 }
 
@@ -28,4 +28,29 @@
   background: -webkit-linear-gradient(#f1e9ef, #e00ce7);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.HomePage__header-img {
+  height: 30%;
+  z-index: -1;
+}
+
+.img1 {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+}
+
+.img2 {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+@media (max-width: 694px) {
+
+  .img2,
+  .img1 {
+    display: none;
+  }
 }
