--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -21,7 +21,7 @@
 
 .HomePage__header-p {
   line-height: 1.625;
-  margin-top: 20px;
+  margin-top: 10px;
   letter-spacing: 0.8px;
 }
 
@@ -34,8 +34,20 @@
 
 /* Features section  */
 .HomePage__features {
-  /* background-color: #181818; */
+  margin: 100px 10%;
   height: 100vh;
+}
+
+.HomePage__features-h1 {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.HomePage__features-box {
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 /* Media queries */
