--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -35,7 +35,7 @@ ul {
 }
 
 ul.footer-list {
-  padding: 0; /* Reset padding for the ul with class footer-list */
+  padding: 0;
 }
 
 ul.footer-list li {
@@ -71,12 +71,12 @@ ul.footer-list li {
 
 /* Add hover animation to links */
 .social-icons a:hover {
-  color: #ff8800; /* Change the color to your desired hover color */
+  color: #ff8800;
 }
 
 .footer-link {
   text-decoration: none;
-  color: #fff;
+  color: #ffffff8c;
 }
 
 /*newsletter*/
@@ -96,9 +96,9 @@ ul.footer-list li {
 .newsletter-input {
   width: 100%;
   padding: 12px;
-  border: 2px solid #ff8800; /* Border color */
+  border: 2px solid #ff8800;
   background-color: transparent;
-  color: #fff; /* Text color */
+  color: #fff;
   border-radius: 5px;
   font-size: 1rem;
   outline: none;
@@ -106,11 +106,33 @@ ul.footer-list li {
 }
 
 .newsletter-input::placeholder {
-  color: #ccc; /* Placeholder text color */
+  color: #ccc;
 }
 
 .newsletter-input:hover,
 .newsletter-input:focus {
   border-color: #ff5500;
   box-shadow: 0 0 5px rgba(255, 136, 0, 0.5);
+}
+
+.footer-line {
+  height: 5px;
+  border-radius: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+/* Responsive styles for small screens */
+@media (max-width: 768px) {
+  .footer-grid {
+    grid-template-columns: 1fr 1fr; /* Two columns for small screens */
+  }
+  .footer-line {
+    height: 2px;
+  }
+
+  .footer-legal,
+  .footer-bottom {
+    grid-column: span 2; /* Span two columns for small screens */
+  }
 }
