Revert "Created Footer"

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,138 +1,9 @@
-/* Footer styles */
 footer {
-  font-family: "Noto Sans", cursive;
+  font-family: 'Noto Sans', cursive;
   height: 70vh;
   background-image: linear-gradient(to bottom, rgb(16, 16, 16), black);
 }
 
 .Footer__div {
   margin: 100px 10%;
-}
-
-.footer-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  gap: 20px;
-  align-items: start;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.footer-logo img {
-  max-width: 100%;
-  height: auto;
-}
-
-.footer h4 {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-ul.footer-list {
-  padding: 0;
-}
-
-ul.footer-list li {
-  margin-bottom: 0.5rem; /* Add vertical spacing between li elements */
-}
-
-.footer-legal .newsletter {
-  margin-top: 20px;
-}
-.footer-headings {
-  padding-bottom: 0.8rem;
-}
-
-.footer-bottom {
-  max-width: 1200px;
-  margin: 20px auto 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.social-icons a {
-  margin-left: 10px;
-  text-decoration: none;
-  color: #fff;
-  transition: color 0.2s ease-in-out;
-}
-
-.social-icons img {
-  max-width: 20px;
-  height: auto;
-}
-
-/* Add hover animation to links */
-.social-icons a:hover {
-  color: #ff8800;
-}
-
-.footer-link {
-  text-decoration: none;
-  color: #ffffff8c;
-}
-
-/*newsletter*/
-.newsletter {
-  margin-top: 20px;
-  text-align: center;
-}
-
-.newsletter-text {
-  font-size: 0.8rem;
-  color: #fff;
-  margin-bottom: 10px;
-  font-weight: bold;
-  text-align: left;
-}
-
-.newsletter-input {
-  width: 100%;
-  padding: 12px;
-  border: 2px solid #ff8800;
-  background-color: transparent;
-  color: #fff;
-  border-radius: 5px;
-  font-size: 1rem;
-  outline: none;
-  transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-}
-
-.newsletter-input::placeholder {
-  color: #ccc;
-}
-
-.newsletter-input:hover,
-.newsletter-input:focus {
-  border-color: #ff5500;
-  box-shadow: 0 0 5px rgba(255, 136, 0, 0.5);
-}
-
-.footer-line {
-  height: 5px;
-  border-radius: 5px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-/* Responsive styles for small screens */
-@media (max-width: 768px) {
-  .footer-grid {
-    grid-template-columns: 1fr 1fr; /* Two columns for small screens */
-  }
-  .footer-line {
-    height: 2px;
-  }
-
-  .footer-legal,
-  .footer-bottom {
-    grid-column: span 2; /* Span two columns for small screens */
-  }
 }
