Bugfix: Feature boxes are now responsive

--- a/src/components/FeatureBox/FeatureBox.css
+++ b/src/components/FeatureBox/FeatureBox.css
@@ -1,5 +1,5 @@
 .FeatureBox {
-  height: 120px;
+  /* height: 120px; */
   width: 300px;
   margin: 5px;
   padding: 24px;
@@ -11,7 +11,7 @@
   background-image: linear-gradient(to bottom, black, rgb(10, 10, 10));
 }
 
-.FeatureBox>p {
+.FeatureBox-Content {
   color: rgb(133, 131, 131);
   font-family: cursive;
 }
